[package]
name = "sonm"
version = "0.1.0"
authors = ["Evgeny Safronov <division494@gmail.com>"]
license = "MIT"
description = "Rust SONM API"

[dependencies]
base64 = "0.9"
ethereum-types = "*"
openssl = "0.10"
secp256k1 = "0.8"
tiny-keccak = "*"
rust-crypto = "0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
rustc-hex = "1.0"
futures-await = "0.1"
actix = "*"
actix-web = "*"
rand = "*"

num-bigint = "0.2"
num-traits = "0.2"
